--- a/cdp-lint/package.json
+++ b/cdp-lint/package.json
@@ -35,17 +35,20 @@
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^2.0.0",
+    "gulp-eslint": "^2.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-less": "^3.0.5",
     "gulp-remember": "^0.3.1",
+    "gulp-stylelint": "^2.0.2",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.2.1",
     "main-bower-files": "^2.11.1",
     "minimist": "^1.2.0",
+    "plato": "^1.5.0",
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
